--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <div id="controls">
     <button id="start-button">Iniciar</button>
     <button id="restart-button">Reiniciar</button>
-    <button id="left-button">Esquerda</button>
-    <button id="right-button">Direita</button>
-    <button id="fire-button">Atirar</button>
+    <button id="pause-button">Pausar</button>
+    <button id="left-button">←</button>
+    <button id="fire-button">🔥</button>
+    <button id="right-button">→</button>
   </div>
   <div id="scoreboard">
     <p>Pontuação: <span id="score">0</span></p>
