--- a/index.html
+++ b/index.html
@@ -12,14 +12,28 @@
     <div id="invaders-container"></div>
     <div id="game-message" class="hidden"></div>
   </div>
-  <div id="controls">
+
+  <div id="instructions-box">
+    <h2>Controles:</h2>
+    <ul>
+      <li><strong>←</strong>: Mover para a esquerda</li>
+      <li><strong>→</strong>: Mover para a direita</li>
+      <li><strong>Espaço</strong>: Disparar</li>
+    </ul>
+  </div>
+
+  <div id="top-controls">
     <button id="start-button">Iniciar</button>
     <button id="restart-button">Reiniciar</button>
     <button id="pause-button">Pausar</button>
+  </div>
+
+  <div id="controls">
     <button id="left-button">←</button>
     <button id="fire-button">🔥</button>
     <button id="right-button">→</button>
   </div>
+
   <div id="scoreboard">
     <p>Pontuação: <span id="score">0</span></p>
     <p>Recorde: <span id="highscore">0</span></p>
