--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
 </head>
 <body>
   <div id="game-container">
+    <div id="instructions-box">
+      <p><strong>Controles (Desktop):</strong></p>
+      <ul>
+        <li>←: Mover para a esquerda</li>
+        <li>→: Mover para a direita</li>
+        <li>Espaço: Atirar</li>
+      </ul>
+    </div>
     <div id="player"></div>
     <div id="invaders-container"></div>
     <div id="game-message" class="hidden"></div>
-  </div>
-
-  <div id="instructions-box">
-    <h2>Controles:</h2>
-    <ul>
-      <li><strong>←</strong>: Mover para a esquerda</li>
-      <li><strong>→</strong>: Mover para a direita</li>
-      <li><strong>Espaço</strong>: Disparar</li>
-    </ul>
   </div>
 
   <div id="top-controls">
@@ -28,15 +27,15 @@
     <button id="pause-button">Pausar</button>
   </div>
 
+  <div id="scoreboard">
+    <p>Pontuação: <span id="score">0</span></p>
+    <p>Recorde: <span id="highscore">0</span></p>
+  </div>
+
   <div id="controls">
     <button id="left-button">←</button>
     <button id="fire-button">🔥</button>
     <button id="right-button">→</button>
-  </div>
-
-  <div id="scoreboard">
-    <p>Pontuação: <span id="score">0</span></p>
-    <p>Recorde: <span id="highscore">0</span></p>
   </div>
 
   <audio id="shoot-sound" src="assets/sounds/shoot.mp3"></audio>
